--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <div class = "icon">call</div>
           <div class = "icon">camera</div>	
           <div class = "icon">chrome</div>
+          <div class = "icon">smth</div>
       </div>
       <div class = "search-bar">
           searchbar
